[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/background.jpg" type="Texture" id=1]
[ext_resource path="res://Circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Triangle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level1.gd" type="Script" id=4]
[ext_resource path="res://Theme.tres" type="Theme" id=5]
[ext_resource path="res://Shape.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Triangle1" parent="." groups=["shapes"] instance=ExtResource( 6 )]
shape = PoolVector2Array( 400, -10, -5, 800, -50, -50 )
colour = Color( 0.329412, 0.658824, 0.607843, 1 )

[node name="Triangle2" parent="." instance=ExtResource( 3 )]
points = PoolVector2Array( 500, -50, 1000, -50, 800, 1000 )
color = Color( 0.913725, 0.788235, 0.486275, 1 )

[node name="Triangle3" parent="." instance=ExtResource( 6 )]
shape = PoolVector2Array( 400, 300, 600, 500, 200, 450 )
colour = Color( 0.501961, 0.137255, 0.145098, 1 )

[node name="Dinsky" parent="." instance=ExtResource( 2 )]
position = Vector2( 297, 309 )
input_pickable = true
size = 100

[node name="Tri1Intersection" parent="." instance=ExtResource( 6 )]
colour = Color( 0.0196078, 0.25098, 0.611765, 1 )

[node name="Tri2Intersection" parent="." instance=ExtResource( 6 )]
colour = Color( 0.807843, 0.160784, 0.184314, 1 )

[node name="Tri3Intersection" parent="." instance=ExtResource( 6 )]
colour = Color( 0.909804, 0.854902, 0.760784, 1 )

[node name="TriangleQQremove" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 662, 271 )
points = PoolVector2Array( 0, 0, 200, -100, 150, 200 )

[node name="IntersectionMarker" type="Area2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="IntersectionMarker"]
color = Color( 0.431373, 0.0862745, 0.109804, 1 )
polygon = PoolVector2Array( -52, 25, 28, 40, 60, -62 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="IntersectionMarker"]
polygon = PoolVector2Array( -52, 20, 27, 44, 61, -55 )

[node name="LevelCompleteUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="NextLevelButton" type="Button" parent="LevelCompleteUI"]
margin_left = 821.0
margin_top = 508.0
margin_right = 965.0
margin_bottom = 548.0
theme = ExtResource( 5 )
text = "Next level >"

[connection signal="input_event" from="Tri2Intersection" to="." method="_on_Tri2Intersection_input_event"]
[connection signal="input_event" from="IntersectionMarker" to="." method="_on_IntersectionMarker_input_event"]
[connection signal="pressed" from="LevelCompleteUI/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
